crates/analyzer/tests/snapshots/errors__ctx_not_after_self.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"
---
error: invalid parameter order
  ┌─ compile_errors/ctx_not_after_self.fe:2:33
  │
2 │     pub fn bar(self, baz: u256, ctx: Context) {}
  │                                 ^^^^^^^^^^^^ `ctx: Context` must be placed after the `self` parameter


